--- a/css/site.css
+++ b/css/site.css
@@ -1,20 +1,35 @@
 h1 {
-    color: blue;
+    color: #ffb3cb;
+    font-family: "Helvetica";
     font-size: 200%
 }
 
 p {
-    font-family: "times new roman";
+    color: #74569b;
+    font-family: "Helvetica";
     text-indent: 20px;
     margin-left: 10px;
 }
 
-#content {
-    background-color: #cccccc;
-    width: 500px;
+html,
+body,
+
+#background {
+  width: 100vw;
+  min-height: 100vh;
+  background-color: #f7ffae;
+}
+
+#intro {
+    background-color: #96fbc7;
+    width: 1000px;
     min-height: 300px;
-    padding: 10px;
+    padding: 20px;
     margin: 10px;
-    border: solid 1px #444444;
+    border: solid 3px #d8bfd8;
     font-size: 20px;
+}
+
+#my-portrait {
+    width: 200px;
 }
